# templates

./: .gitignore  README.md
axum_template/: Cargo.toml  cargo-generate.toml
axum_template/src/: main.rs
axum_template/src/routes/: handler.rs
djs-template/: .eslintrc.json  .gitignore  .prettierignore  .template.env  README.md  package.json  pnpm-lock.yaml
djs-template/src/: constants.ts  index.ts
djs-template/src/commands/: index.ts  ping.ts
djs-template/src/inhibitors/: admin.ts
djs-template/src/services/events/: interaction.ts
djs-template/src/types/: Discord.ts  Error.ts
nextjs-tailwind-template/: package.json  pnpm-lock.yaml
nextjs-tailwind-template/pages/: index.tsx
prisma_axum_template/: .gitignore  Cargo.toml
prisma_axum_template/prisma/: schema.prisma
prisma_axum_template/prisma_cli/: Cargo.toml
prisma_axum_template/server/: Cargo.toml
prisma_axum_template/src/: main.rs  prisma.rs
