[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2021"
description = "{{project-description}}"
authors="{{authors}}"
repository = "https://github.com/{{gh-username}}/{{project-name}}"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.15" }
tokio = { version = "1.0", features = ["full"] }
serde_json = { version = " 1.0.85" }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.0" }